feat: add middleware of token for students, and the methods of authcontroller completed
